tests/negative/parse_missing_brace_open.uzpp
// XATOLIK_KUTILMOQDA: parse: ochuvchi { yo'q
ulash "uzpp_runtime.hpp"
butun asosiy()
    qaytarish 0;
}
